--- a/custom template/index.html
+++ b/custom template/index.html
@@ -24,7 +24,7 @@ box-shadow:0 18px 45px rgba(30,64,175,0.18);overflow:hidden;">
                         <!-- HERO -->
                         <tr>
                             <td>
-                                <img src="/loginPng.png" width="600" alt="ZQENIXA Care"
+                                <img src="/custom template/loginPng.png" width="600" alt="ZQENIXA Care"
                                     style="width:100%;height:auto;display:block;">
                             </td>
                         </tr>
